Change InputMethodController#setSelectionOffsets() to use NotUserTriggered parameter

InputMethodController#setSelectionOffsets() should have no side
effect other than changing the selection. But
FrameSelection::CloseTyping will close typing, causing the failure of
canceling the composing text when inserting line break. We should
use NotUserTriggered parameter because it has no side effect.

BUG=633840

Review-Url: https://codereview.chromium.org/2206923002
Cr-Commit-Position: refs/heads/master@{#410577}

Former-commit-id: 786070a33bcfebaff78b304401a4137e8dadccd8